--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>Merapi Minister</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  <meta name="description" content="Official Page for Merapi Minister">
+  <meta name="keywords" content="merapi, minister, disaster, app, disaster app, bencana, aplikasi, gempa">
+  <meta name="author" content="Universitas Siliwangi">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
