--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/logo.png" alt="Global">
-    <p>Global</p>
+    <p>Merapi Minister</p>
   </a>
-  <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">Web ini menggunakan javascript, mohon ganti browser anda</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -28,20 +28,20 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="Global">
-            <p>Global</p>
+            <p>Merapi Minister</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <button class="header--cta cta">Download Aplikasi</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
         </header>
         <nav class="l-side-nav">
           <ul class="side-nav">
-            <li class="is-active"><span>Home</span></li>
-            <li><span>Works</span></li>
-            <li><span>About</span></li>
-            <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li class="is-active"><span>Beranda</span></li>
+            <li><span>Pekerjaan</span></li>
+            <li><span>Tentang</span></li>
+            <li><span>Kontak</span></li>
+            <li><span>Aplikasi</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
