--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
     </div>
   </div>
   <ul class="outer-nav">
-    <li class="is-active">Home</li>
-    <li>Works</li>
-    <li>About</li>
-    <li>Contact</li>
-    <li>Hire us</li>
+    <li class="is-active"><span>Beranda</span></li>
+    <li><span>Pekerjaan</span></li>
+    <li><span>Tentang</span></li>
+    <li><span>Kontak</span></li>
+    <li><span>Aplikasi</span></li>
   </ul>
 </div>
 
