--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Your next<br>interactive<br>experience</h1>
-                <button class="cta">Hire Us
+                <h1>Aplikasi<br>Peringatan <br> Bencana<br>untuk anda</h1>
+                <button class="cta">Download Sekarang
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -61,16 +61,16 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>SIAP SIAGA SAAT BENCANA</h3>
+                  <p>Dapatkan peringatan dini tentang bencana alam disekitarmu.</p>
                 </a>
                 <a href="#0">
-                  <h3>Fantasy interactive</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Panduan tanggap bencana </h3>
+                  <p>Dapatkan tata cara tanggap bencana saat bencana terjadi.</p>
                 </a>
                 <a href="#0">
-                  <h3>Paul &amp; shark</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Cari tempat aman SAAT BENCANA</h3>
+                  <p>Cari tempat aman untuk anda ketika bencana terjadi.</p>
                 </a>
               </div>
             </div>
@@ -131,27 +131,18 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
-                <a href="#0">Career
-                  <span>
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                    <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                      <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
-                    </g>
-                    </svg>
-                  </span>
-                </a>
+                <h2>Merapi minister <br>Team. <br> Universitas <br> siliwangi</h2>
                 <img src="assets/img/about-visual.png" alt="About Us">
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>Faishal A.</h3>
                 </a>
                 <a href="#0">
-                  <h3>Philosophy</h3>
+                  <h3>Herman S.</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Aisyah</h3>
                 </a>
               </div>
             </div>
@@ -161,9 +152,8 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
+                    <p>Jalan Siliwangi No.24, Kahuripan, <br>Tawang, Kahuripan, Kec. Tawang, <br>Tasikmalaya, Jawa Barat 46115</p>
+                    <a href="mailto:merapiminister@gmail.com">merapiminister@gmail.com</a>
                   </div>
                   <ul class="modal--options">
                     <li><a href="#0">Bēhance</a></li>
