--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <meta name="keywords" content="merapi, minister, disaster, app, disaster app, bencana, aplikasi, gempa">
   <meta name="author" content="Universitas Siliwangi">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="icon" href="assets/img/Icon-Small.png">
 </head>
 <body>
 
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
+    <img src="assets/img/Icon-Small.png" alt="Global">
     <p>Merapi Minister</p>
   </a>
   <p class="device-notification--message">Web ini menggunakan javascript, mohon ganti browser anda</p>
@@ -27,7 +28,7 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Global">
+            <img src="assets/img/Icon-Small.png" alt="Global">
             <p>Merapi Minister</p>
           </a>
           <button class="header--cta cta">Download Aplikasi</button>
@@ -38,10 +39,10 @@
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Beranda</span></li>
-            <li><span>Pekerjaan</span></li>
+            <li><span>Features</span></li>
             <li><span>Tentang</span></li>
             <li><span>Kontak</span></li>
-            <li><span>Aplikasi</span></li>
+          <!--   <li><span>Aplikasi</span></li> -->
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -57,7 +58,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/introduction-visual.png" alt="Welcome">
+                <img src="assets/img/vol.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
@@ -77,34 +78,34 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>Features</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                        <img src="assets/img/rsz_bell.jpg" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">SIAGA BENCANA</p>
+                      <p class="slider--item-description">Dapatkan peringatan dini tentang bencana alam disekitarmu.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <img src="assets/img/rsz_info.jpg" alt="Metiew and Smith">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">TANGGAP BENCANA</p>
+                      <p class="slider--item-description">Dapatkan tata cara tanggap bencana saat bencana terjadi.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets/img/rsz_shield.jpg" alt="Alex Nowak">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">AMAN SAAT BENCANA</p>
+                      <p class="slider--item-description">Dapatkan rute menuju tempat aman(lokasi evakuasi).</p>
                     </a>
                   </li>
                 </ul>
@@ -136,13 +137,13 @@
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Faishal A.</h3>
+                  <h3>Aisah</h3>
                 </a>
                 <a href="#0">
-                  <h3>Herman S.</h3>
+                  <h3>Faisal</h3>
                 </a>
                 <a href="#0">
-                  <h3>Aisyah</h3>
+                  <h3>Herman</h3>
                 </a>
               </div>
             </div>
@@ -156,8 +157,8 @@
                     <a href="mailto:merapiminister@gmail.com">merapiminister@gmail.com</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
+                    <li><a href="#0">Facebook</a></li>
+                    <li><a href="#0">Instagram</a></li>
                     <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
                   </ul>
                 </div>
@@ -255,10 +256,10 @@
   </div>
   <ul class="outer-nav">
     <li class="is-active"><span>Beranda</span></li>
-    <li><span>Pekerjaan</span></li>
+    <li><span>Features</span></li>
     <li><span>Tentang</span></li>
-    <li><span>Kontak</span></li>
-    <li><span>Aplikasi</span></li>
+	    <li><span>Kontak</span></li><!-- 
+	    <li><span>Aplikasi</span></li> -->
   </ul>
 </div>
 
